# fm-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  install.sh  lib.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: install.sh
src/fm_tools/: __init__.py
src/fm_tools/cli/: __init__.py  doctor.py  registry.py  status.py  update.py
src/fm_tools/tui/: __init__.py  banner.py  palette.py  pick.py  theme.py  widgets.py
tests/: test_banner.py  test_cli_doctor.py  test_cli_list.py  test_cli_status.py  test_cli_update.py  test_install_verb.py  test_palette.py  test_pick.py  test_registry.py  test_ros_free.py  test_theme.py  test_widgets.py
