[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-tools"
version = "0.2.0"
description = "First Motive shared terminal tooling: brand banners, themed widgets, and a pick menu."
readme = "README.md"
requires-python = ">=3.10"
# Table form (not the SPDX string): the SPDX expression triggers hatchling's
# metadata 2.4 path, which needs packaging>=24.2 (packaging.licenses) — absent in
# the ros:humble build env. The table form stays installable by old pip.
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
authors = [{ name = "First Motive", email = "nish@ubundi.co.za" }]
# Pure-Python, no rclpy: any First Motive repo can pip install this from a git
# tag without a ROS environment on the path.
dependencies = ["textual>=0.74", "rich"]

# fm-pick: a shell script reads the chosen option from stdout —
# `backend=$(fm-pick "Pick a backend" mujoco gazebo isaac)`.
[project.scripts]
fm-pick = "fm_tools.tui.pick:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/fm_tools"]

[tool.pytest.ini_options]
# pick() is a Textual app; its tests drive the async pilot harness.
asyncio_mode = "auto"
